# aimlcommunitybd

./: .env.example  .gitignore  Makefile  README.md  README_DEV.md  database.db  index.html  main.py  pyproject.toml
.data/: activities.csv  database.db  team.csv
assets/css/: activities.css  coc.css
data/: database.db
legal/: coc.md  code-of-conduct.html  terms-and-conditions.html
sample_templates/: contact.html  footer-newsletter.html  hero.html
scripts/: __init__.py  activities.json  populate.py  populate_admin.py  setup.py
src/app/: db.py  main.py  models.py  settings.py  supabasedb.py  utils.py
src/app/assets/css/: activities.css  dashboard.css  main.css  stats.css
src/app/assets/js/: activities.js
src/app/templates/: about.html  activities.html  base.html  index.html  team.html
src/app/templates/admin/: dashboard.html  login.html
src/app/templates/partial/: footer.html  header.html  hero.html  stats.html
static_page/: about.html  activities.html  call_to_action.html  footer.html  index.html  services.html  stats.html  team.html  testimonial.html
templates/: Jekyll_setup.md  activities.html  base.html  featured.html  header.html  index.html
templates/legal/: code-of-conduct.html
